# memic

./: .gitignore  .gitignore.swo  CMakeLists.txt  README.md  setup.py
_skbuild/linux-x86_64-3.8/cmake-build/CMakeTmp/link_flags/gnu_ld_ignore/MODULE/SHARED/src/: CMakeLists.txt
biogears.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
projects/biogears/: CMakeCache.txt  CMakeLists.txt
projects/biogears-common/: CMakeLists.txt
projects/biogears/cython/: SECardiovascularSystem-backup.pxd
projects/biogears/libBiogears/include/biogears/cdm/engine/: PhysiologyEngine.h
projects/biogears/libBiogears/include/biogears/cdm/patient/actions/: SEBreathHold.h  SEChestCompression.h  SESubstanceAdministration.h
projects/biogears/libBiogears/include/biogears/cdm/scenario/requests/: SEDataRequestManager.h
projects/biogears/libBiogears/include/biogears/cdm/substance/: SESubstancePhysicochemicals.h
projects/biogears/libBiogears/include/biogears/engine/: BioGearsPhysiologyEngine.h
projects/biogears/libBiogears/src/: pybcardio.cpp  pyblogger.cpp  pybscalarpressure.cpp
projects/biogears/libBiogears/src/cdm/engine/: PhysiologyEngineTrack.cpp
projects/biogears/libBiogears/src/cdm/patient/actions/: SEAcuteRespiratoryDistress.cpp  SEChestCompression.cpp
projects/biogears/libBiogears/src/cdm/scenario/requests/: SEDataRequestManager.cpp
projects/biogears/libBiogears/src/cdm/utils/: DataTrack.cpp
projects/biogears/libBiogears/src/engine/Controller/: BioGears.cpp  BioGearsEngine.cpp
projects/biogears/libBiogears/src/pybwrappers/cdm/compartment/: pybSECompartment.cpp  pybSECompartmentManager.cpp
projects/biogears/libBiogears/src/pybwrappers/cdm/engine/: pybPhysiologyEngineTrack.cpp
projects/biogears/libBiogears/src/pybwrappers/cdm/patient/: pybSENutrition.cpp  pybSEPatient.cpp
projects/biogears/libBiogears/src/pybwrappers/cdm/patient/actions/: pybSEAcuteRespiratoryDistress.cpp  pybSEAcuteStress.cpp  pybSEAirwayObstruction.cpp  pybSEApnea.cpp  pybSEAsthmaAttack.cpp  pybSEBrainInjury.cpp  pybSEBreathHold.cpp  pybSEBronchoconstriction.cpp  pybSEBurnWound.cpp  pybSECardiacArrest.cpp  pybSEChestCompressionForce.cpp  pybSEChestCompressionForceScale.cpp  pybSEChestOcclusiveDressing.cpp  pybSEConsciousRespiration.cpp  pybSEConsumeNutrients.cpp  pybSEExercise.cpp  pybSEForcedExhale.cpp  pybSEForcedInhale.cpp  pybSEHemmorrhage.cpp  pybSEInfection.cpp  pybSEIntubation.cpp  pybSEMechanicalVentilation.cpp  pybSENeedleDecompression.cpp  pybSEOverride.cpp  pybSEPainStimulus.cpp  pybSEPatientAction.cpp  pybSEPatientAssessmentRequest.cpp  pybSEPericardialEffusion.cpp  pybSEPupillaryResponse.cpp  pybSESleep.cpp  pybSESubstanceBolus.cpp  pybSESubstanceCompoundInfusion.cpp  pybSESubstanceInfusion.cpp  pybSESubstanceNasalDose.cpp  pybSESubstanceOralDose.cpp  pybSETensionPneumothroax.cpp  pybSETourniquet.cpp  pybSEUrinate.cpp  pybSEUseInhaler.cpp
projects/biogears/libBiogears/src/pybwrappers/cdm/patient/assessments/: pybSECompleteBloodCount.cpp  pybSEComprehensiveMetabolicPanel.cpp  pybSEPulmonaryFunctionTest.cpp  pybSESequentialOrganFailureAssessment.cpp  pybSEUrinalysis.cpp  pybSEUrinalysisMicroscopic.cpp
projects/biogears/libBiogears/src/pybwrappers/cdm/patient/conditions/: pybSEChronicAnemia.cpp  pybSEChronicObstructivePulmonaryDisease.cpp  pybSEChronicPericardialEffusion.cpp  pybSEChronicRenalStenosis.cpp  pybSEChronicVentricularSystolicDysfunction.cpp  pybSEDehydration.cpp  pybSEDiabetesType1.cpp  pybSEDiabetesType2.cpp  pybSEImpairedAlveolarExchange.cpp  pybSELobarPneumonia.cpp  pybSEStarvation.cpp
projects/biogears/libBiogears/src/pybwrappers/cdm/properties/: pybConstants.cpp  pybSEScalar0To1.cpp  pybSEScalarLengthPerTime.cpp  pybSEScalarQuantity.cpp
projects/biogears/libBiogears/src/pybwrappers/cdm/scenario/: pybSEAction.cpp  pybSEActionManager.cpp  pybSEAdvanceTime.cpp  pybSEAnesthesiaMachineActionCollection.cpp  pybSEConditionManager.cpp  pybSEEnvironmentActionCollection.cpp  pybSEInhalerActionCollection.cpp  pybSEPatientActionCollection.cpp  pybSEScenario.cpp  pybSEScenarioAutoSerialization.cpp  pybSEScenarioExec.cpp  pybSEScenarioInitialParameters.cpp  pybSESerializeState.cpp
projects/biogears/libBiogears/src/pybwrappers/cdm/scenario/requests/: pybSECompartmentDataRequest.cpp  pybSECompartmentSubstanceDataRequest.cpp  pybSEDataRequest.cpp  pybSEDataRequestManager.cpp  pybSEEnvironmentDataRequest.cpp  pybSEEquipmentDataRequest.cpp  pybSEGasCompartmentDataRequest.cpp  pybSELiquidCompartmentDataRequest.cpp  pybSEPatientDataRequest.cpp  pybSEPhysiologyDataRequest.cpp  pybSESubstanceDataRequest.cpp  pybSEThermalCompartmentDataRequest.cpp  pybSETissueCompartmentDataRequest.cpp
projects/biogears/libBiogears/src/pybwrappers/cdm/substance/: pybSESubstance.cpp  pybSESubstanceAerosolization.cpp  pybSESubstanceClearance.cpp  pybSESubstanceCompound.cpp  pybSESubstanceConcentration.cpp  pybSESubstanceFraction.cpp  pybSESubstanceManager.cpp  pybSESubstancePharmacodynamics.cpp  pybSESubstancePharmacokinetics.cpp  pybSESubstancePhysicochemicals.cpp  pybSESubstanceTissuePharmacokinetics.cpp
projects/biogears/libBiogears/src/pybwrappers/cdm/system/: pybSESystem.cpp
projects/biogears/libBiogears/src/pybwrappers/cdm/system/physiology/: pybSEBloodChemistrySystem.cpp  pybSECardiovascularSystem.cpp  pybSEDrugSystem.cpp  pybSEEndocrineSystem.cpp  pybSEEnergySystem.cpp  pybSEGastrointestinalSystem.cpp  pybSEHepaticSystem.cpp  pybSENervousSystem.cpp  pybSERenalSystem.cpp  pybSERespiratorySystem.cpp  pybSETissueSystem.cpp
projects/biogears/libBiogears/src/pybwrappers/cdm/utils/: pybLogger.cpp
projects/biogears/libBiogears/src/pybwrappers/cdm/utils/unitconversion/: pybCCompoundUnit.cpp
projects/biogears/libBiogears/src/pybwrappers/engine/Controller/: pybBioGearsEngine.cpp  pybBioGearsEngineHeader.cpp
projects/biogears/old_pxd_pyx backup/: _pycardio copy.pxd  pycardio.pxd  pycardio.pyx
projects/biogears/pybind11/: install_manifest.txt
scripts/: HowToExercise-modified.py  HowToExercise.py  importing-constants.py  physiology.json  physiologyxsd_dict.py  scrub.py
(+100 files in other folders)
